fix: layout overflow in Course Not Found page

--- a/website/src/views/errors/ErrorPage.scss
+++ b/website/src/views/errors/ErrorPage.scss
@@ -39,23 +39,16 @@
 .buttons {
   display: flex;
   flex-direction: column;
+  flex-wrap: wrap;
+  gap: 0.8rem 1rem;
   margin-bottom: 2rem;
-
-  :global(.btn) {
-    margin-bottom: 0.8rem;
-  }
 
   @include media-breakpoint-up(sm) {
     flex-direction: row;
     justify-content: center;
 
     :global(.btn) {
-      margin-right: 1em;
-      margin-bottom: 0;
-    }
-
-    :global(.btn):last-child {
-      margin-right: 0;
+      min-width: 12rem;
     }
   }
 }
